# kix

./: .gitignore  :w  Cargo.toml  README.md  flake.nix  justfile  result
hello/.direnv/: flake-profile-1-link
src/: config.rs  main.rs  replace.rs  repos.rs  templates.rs  tui.rs
