[package]
name = "kix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
fspp = "2.2.1"
fzf-wrapped = "0.1.4"
piglog = "1.4.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
